--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "migration": "knex migrate:latest"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "mysql2": "^3.2.4",
-    "qs": "^6.11.1"
+    "qs": "^6.11.1",
+    "secure-random-string": "^1.1.3"
   }
 }
